# mini-agent

./: .gitignore  AGENTS.md  CLAUDE.md  COEXISTENCE.md  README.md  pyproject.toml
skills/: example.md
src/agent_kernel/: tool_calling.py
src/agent_kernel/providers/: __init__.py  base.py  openai.py  registry.py
src/agent_kernel/tools/: __init__.py  base.py  permissions.py
src/agent_kernel/tools/native/: __init__.py  command.py  file_ops.py  search.py
src/mini_agent/: __init__.py  cli.py
src/mini_agent/api/: service.py
src/mini_agent/cli/: app.py
src/mini_agent/config/: settings.py
src/mini_agent/core/: agent.py  mode.py
src/mini_agent/persistence/: __init__.py  base.py  export.py  migrate.py  models.py  schema.py
src/mini_agent/prompts/: builder.py
src/mini_agent/prompts/sections/: objective.py  role.py  rules.py  system_info.py  tools.py
src/mini_agent/providers/: base.py  openai.py  registry.py
src/mini_agent/scripts/: open_agent_show_prompt.py  roo_agent_show_prompt.py
src/mini_agent/tools/: base.py
src/mini_agent/tools/agent/: task_tools.py
src/mini_agent/tools/native/: command.py  file_ops.py  interaction.py  search.py  skill_tool.py  todo.py
src/minimal_agent/: __init__.py  cli.py
src/open_agent/: __init__.py
src/open_agent/agents/: __init__.py  base.py  coder.py  compaction.py  debugger.py  designer.py  explorer.py  fixer.py  librarian.py  oracle.py  orchestrator.py  planner.py  registry.py  reviewer.py
src/open_agent/api/: __init__.py  service.py
src/open_agent/api/http/: server.py
src/open_agent/bus/: __init__.py  bus.py  events.py
src/open_agent/cli/: __init__.py  app.py
src/open_agent/config/: __init__.py  agents.py  settings.py
src/open_agent/core/: __init__.py  app.py  background.py  delegation.py  service.py  session.py
src/open_agent/hooks/: __init__.py  base.py  registry.py
src/open_agent/persistence/: models.py  store.py
src/open_agent/prompts/: builder.py
src/open_agent/providers/: __init__.py  base.py  openai.py  registry.py
src/open_agent/tools/: __init__.py  base.py  permissions.py
src/roo_agent/: __init__.py
src/roo_agent/api/: events.py  service.py
src/roo_agent/cli/: app.py  config_wizard.py
src/roo_agent/config/: settings.py
src/roo_agent/core/: __init__.py  agent.py  mode.py  service.py
src/roo_agent/persistence/: models.py  store.py
src/roo_agent/prompts/: builder.py
src/roo_agent/providers/: openai.py  registry.py
src/roo_agent/skills/: loader.py  manager.py
src/roo_agent/tools/: __init__.py  base.py
tests/: conftest.py  test_api_service.py  test_app_wiring.py  test_bus.py  test_delegation.py  test_e2e_cli.py  test_e2e_http.py  test_e2e_provider.py  test_e2e_tool_approval.py  test_e2e_tool_calling.py  test_e2e_tool_calling_certification.py  test_hooks.py  test_permissions.py  test_persistence.py  test_todo.py  test_tools_native.py
tests/helpers/: __init__.py  e2e_config.py  mock_provider.py
tests/security/: __init__.py  test_api_key_handling.py  test_path_traversal.py
tests/unit/: test_open_agent_show_prompt.py  test_roo_agent_show_prompt.py  test_tool_approval.py
tests/unit/agent_kernel/: test_openai_provider_thinking.py  test_providers_registry.py  test_tools_base.py
tests/unit/open_agent/: test_cli_todo.py  test_todo.py
ui/: README.md  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/hooks/: useAgentStream.ts
(+94 files in other folders)
