[project]
name = "open-agent"
version = "0.1.0"
description = "Multi-agent AI framework with typed event bus and hierarchical delegation"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "aiosqlite>=0.19",
    "tiktoken>=0.5",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=1.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.scripts]
open-agent = "open_agent.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
