[project]
name = "mini-agent"
version = "2.0.0"
description = "Dual-framework AI agent platform (roo-agent + open-agent)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "aiosqlite>=0.19",
    "tiktoken>=0.5",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=1.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.scripts]
mini-agent = "mini_agent.cli:main"
roo-agent = "roo_agent.cli.app:main"
open-agent = "open_agent.cli:main"
open-agent-show-prompt = "mini_agent.scripts.open_agent_show_prompt:main"
roo-agent-show-prompt = "mini_agent.scripts.roo_agent_show_prompt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roo_agent", "src/open_agent", "src/mini_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (E2E tests, require API key)",
]
